--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,8 +10,8 @@ add_executable(Projekt main.cpp
         utility.cpp
         config.h
         api_suhtlus.h
-        andmestruktuurid.h
         CLI.h
+        retsepti_otsing.h
 )
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/curl-8.7.1_7-win64-mingw/curl-8.7.1_7-win64-mingw/include)
@@ -19,4 +19,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/curl-8.7.1_7-win64-mingw/curl-8.
 target_link_libraries(Projekt ${CMAKE_CURRENT_SOURCE_DIR}/curl-8.7.1_7-win64-mingw/curl-8.7.1_7-win64-mingw/lib/libcurl.dll.a)
 
 # kui tuleb error "Process finished with exit code -1073741515 (0xC0000135)"
-# siis lisada system pathi C:\Users\eliis\CLionProjects\Projekt\libs\curl-8.7.1_7-win64-mingw\curl-8.7.1_7-win64-mingw\bin
+# siis lisada system pathi C:\Users\eliis\CLionProjects\Projekt\curl-8.7.1_7-win64-mingw\curl-8.7.1_7-win64-mingw\bin
