teeb rohkem retsepte

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ add_executable(Projekt main.cpp
         api_suhtlus.h
         CLI.h
         retsepti_otsing.h
+        failid.cpp
+        failid.h
 )
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/curl-8.7.1_7-win64-mingw/curl-8.7.1_7-win64-mingw/include)
@@ -19,4 +21,4 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/curl-8.7.1_7-win64-mingw/curl-8.
 target_link_libraries(Projekt ${CMAKE_CURRENT_SOURCE_DIR}/curl-8.7.1_7-win64-mingw/curl-8.7.1_7-win64-mingw/lib/libcurl.dll.a)
 
 # kui tuleb error "Process finished with exit code -1073741515 (0xC0000135)"
-# siis lisada system pathi C:\Users\eliis\CLionProjects\Projekt\curl-8.7.1_7-win64-mingw\curl-8.7.1_7-win64-mingw\bin
+# siis lisada system pathi C:\Users\{user}\CLionProjects\Projekt\curl-8.7.1_7-win64-mingw\curl-8.7.1_7-win64-mingw\bin
